fix layout problems and add style to the input-fields

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,9 @@
 
 }
 
-
+* {
+    font-family: "abhaya_libreregular";
+}
 body {
     display: flex;
     background-color: black;
@@ -74,7 +76,7 @@ body {
   .background {
 
     display: flex;
-    background-color: rgb(236, 223, 203);
+    background-color: rgb(225, 210, 188);
 
     margin-top: 2vw;
   }
@@ -86,27 +88,62 @@ body {
     display: flex;
     flex-wrap: wrap;
     font-family: "abhaya_libreregular";
-    font-size: calc(12px + 1vw);
     padding-top: 30px;
+    justify-items: stretch;
   }
-
+  #firstLine {
+    font-size: calc(20px + 1vw);
+    font-weight: 1000;
+    display: block;
+    width: 100%;
+  } 
   .textBoxTop {
     display: flex;
-    font-size: calc(12px + 1vw);
-    max-width: 800px;
-    padding-left: 50px;
+    font-size: calc(8px + 1vw);
+    max-width: 1000px;
+    max-height: 200px;
+    padding-left: 100px;
+    font-weight: 600;
+    margin-right: 40px;
 
   }
-  img {
-    flex-shrink: 0;
+  
+  .imagecontentbox {
+    position: relative;
     min-height:945px;
     min-width:600px;
     max-width:600px;
   }
+  img {
   
+  }
+  
+  .card-body {
+    position: absolute;
+    display: flex;
+    height: 150px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    text-align: center;
+    top: 14.6rem;
+  }
+.test {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+#submarine {
+  position: absolute;
+  opacity: 1;
+  height: 100%;
+
+}
+
 .inputFields {
     display: flex;
-    justify-content: center;
 }
 
   .input, .firstName, .lastName{
@@ -117,6 +154,8 @@ body {
     flex-wrap: wrap;
     border-radius: 10px;
     flex-direction: column;
+    margin-bottom: 5px;
+    margin-top: 0px;
   }
 
   input {
@@ -130,14 +169,14 @@ body {
   {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     max-height: 300px;
-    width:100vw;
+    width: 100%;
+    min-width: 800px;
     background-color: rgb(244, 234, 220);
-    align-content: flex-start;
-    padding-left: 50px;
+    padding-left: 90px;
     box-shadow: 3px 6px 4px -4px rgba(0,0,0,0.46);
-
+    
   }
 
   header {
@@ -145,22 +184,65 @@ body {
   width: 100%;
   align-content: center;
   background-color: rgb(244, 234, 220);
-  padding-left: 50px;
+  padding-left: 100px;
   max-height: 60px;
   align-self: flex-end;
+  font-weight: 800;
+  font-size: calc(14px + 1vw);
+  
   }
 
-  label {
+  input + span {
+    position: relative;
+  }
+  
+  input[type="text"]:focus:invalid + span::after {
+    font-size: 0.8rem;
+    position: absolute;
+    content: "* don't be shy - tell us your name!";
+    color: red;
+    padding: 5px 10px;
+    top: -4px;
+    left: -8px;
+  }
 
+  input[type="email"]:focus:invalid + span::after {
+    font-size: 0.8rem;
+    position: absolute;
+    content: "* this E-Mail is missing an @!";
+    color: red;
+    padding: 5px 10px;
+    top: -4px;
+    left: -8px;
+  }
 
+  input[type="password"]:focus:invalid + span::after {
+    font-size: 0.8rem;
+    position: absolute;
+    content: "* passwords require at least one number!";
+    color: red;
+    padding: 5px 10px;
+    top: -4px;
+    left: -8px;
+  }
+
+  input[type="tel"]:focus:invalid + span::after {
+    font-size: 0.8rem;
+    position: absolute;
+    content: "* this field only accepts numbers!";
+    color: red;
+    padding: 5px 10px;
+    top: -4px;
+    left: -8px;
   }
 
   .textcontentbox2 {
     display: flex;
-    font-size: calc(12px + 1vw);
+    font-size: calc(10px + 1vw);
     max-width: 800px;
-    padding-left: 50px;
+    padding-left: 100px;
     padding-top: 30px;
+    font-weight: bold;
 
   }
 
@@ -170,7 +252,7 @@ body {
   }
 
   .btn {
-margin-left: 50px;
+margin-left: 100px;
 margin-top: 30px;
 font-size: 20px;
 padding-left: 20px;
@@ -180,9 +262,15 @@ padding-bottom: 10px;
 -webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.32); 
 box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.32);
 border: 2px solid black;
-border-radius: 5px;;
+border-radius: 5px;
+cursor: pointer;
+transition: background-color 0.3s, color 0.3s;    
+  }
 
-    
+  .btn:hover {
+    background-color: #7da0e3; /* Hintergrundfarbe beim Hover */
+    color: #ffffff; /* Textfarbe beim Hover */
+
   }
 
   .btnAndText {
